--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container-lg">
         <div class="row min-vh-100 align-items-center justify-content-center">
           <div class="col-lg-6 mt-5 mt-lg-0">
-            <div class="home-img text-center">
+            <div class="home-img mt-4 text-center">
               <div id="img-wrapper">
                 <img
                   src="img/profile.png"
@@ -64,7 +64,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 order-lg-first mt-5 mt-md-0">
+          <div class="col-lg-6 order-lg-first mt-1 mt-md-0">
             <div class="home-text">
               <p class="text-muted mb-1">Hello I'm</p>
               <h1 class="text-info text-uppercase fs-1 fw-bold">
@@ -378,7 +378,7 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-8 col-xl-7">
+          <div class="col-12 col-sm-8 col-xl-8">
             <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
               <ul class="carousel-indicators">
                 <li
@@ -595,7 +595,11 @@
           <div class="col-lg-12">
             <p class="m-0 text-center text-white fs-5">
               &copy; 2022 Developed By
-              <a href="https://github.com/kamalheydari" class="text-decoration-none text-white " >Kamal-Heydari</a>
+              <a
+                href="https://github.com/kamalheydari"
+                class="text-decoration-none text-white"
+                >Kamal-Heydari</a
+              >
             </p>
           </div>
         </div>
