--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                     class="testimonial-author-info d-flex align-items-center"
                   >
                     <img
-                      src="/img/testimonial/1.jpg"
+                      src="./img/testimonial/1.jpg"
                       class="img-thumbnail rounded-circle"
                       alt="author img"
                     />
@@ -437,7 +437,7 @@
                     class="testimonial-author-info d-flex align-items-center"
                   >
                     <img
-                      src="/img/testimonial/2.jpg"
+                      src="./img/testimonial/2.jpg"
                       class="img-thumbnail rounded-circle"
                       alt="author img"
                     />
@@ -467,7 +467,7 @@
                     class="testimonial-author-info d-flex align-items-center"
                   >
                     <img
-                      src="/img/testimonial/3.jpg"
+                      src="./img/testimonial/3.jpg"
                       class="img-thumbnail rounded-circle"
                       alt="author img"
                     />
